Implemented admin panel and backend functions

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.8",
     "ionicons": "^7.0.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
