Type errors fixed.

--- a/API/package.json
+++ b/API/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
